# robot-appium-emulator

./: README.md  azure-pipelines.yml  pyproject.toml
.github/workflows/: robot-mobile-tests.yml
config/: mobile.yaml
tests/: mobile_open_youtube.robot
