[project]
name = "robot-automation"
version = "0.1.0"
description = "Automação de testes"
authors = [
    {name = "Anderson Rocha",email = "profissional.andersonrocha@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "robotframework (>=7.3.2,<8.0.0)",
    "robotframework-appiumlibrary (>=3.1,<4.0)",
    "robotframework-seleniumlibrary (>=6.2.0,<7.0.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
